@@ -3,6 +3,7 @@
 - redis-graph commands support
 - redisearch commands support
 - rejson commands support
+- neural-redis commands support
 - Handle runtime commands
 
 1.8.8 / October 23, 2017
